Fix padding between a-z list and selected letter on mobile screen

--- a/app/webpacker/src/stylesheets/_a-z-index.scss
+++ b/app/webpacker/src/stylesheets/_a-z-index.scss
@@ -2,6 +2,10 @@
   ol.index {
     margin-bottom: 1.25em;
 
+    @media (max-width: $mobile-max-width) {
+      margin-bottom: govuk-spacing(6);
+    }
+
     li {
       font-size: 24px;
       display: inline;
